add_executable(glfwapp GLapplication.cpp)
add_executable(glfwapp GLcamera.cpp)
add_executable(glfwapp GLcontext.cpp)
add_executable(glfwapp GLmaterial.cpp)
add_executable(glfwapp GLquadric.cpp)
add_executable(glfwapp GLsphere.cpp)
add_executable(glfwapp GLtexture.cpp)
add_executable(glfwapp GLtorus.cpp)
add_executable(glfwapp GLtorusVertex.cpp)
add_executable(glfwapp MyApplication.cpp)
add_executable(glfwapp PS4axes.cpp)
add_executable(glfwapp PS4joystick.cpp)
add_executable(glfwapp glfw.cpp)
add_subdirectory(glfw)
cmake_minimum_required(VERSION 3.16.3)
project(glfwapp)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set_target_properties(glfwapp PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../)
target_link_libraries(glfwapp GL)
target_link_libraries(glfwapp GLU)
target_link_libraries(glfwapp glfw)
target_link_libraries(glfwapp pthread)
target_precompile_headers(glfwapp PRIVATE stdafx.h)
